Corrigido bug the processamento na função _format dos dados de telecom

--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -42,6 +42,7 @@
     "#| export\n",
     "import os\n",
     "from functools import cached_property\n",
+    "import gc\n",
     "\n",
     "import pandas as pd\n",
     "from dotenv import find_dotenv, load_dotenv\n",
@@ -163,15 +164,19 @@
     "        discarded = df[duplicated].reset_index(drop=True)\n",
     "        log = f\"\"\"[(\"Colunas\", {AGG_LICENCIAMENTO}),  \n",
     "        (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
-    "        discarded = self.register_log(discarded, log)\n",
+    "        self.append2discarded(self.register_log(discarded, log))\n",
+    "        del discarded\n",
+    "        gc.collect()\n",
+    "        # .count() drop the NaN from the subset, not keeping them\n",
+    "        # df.dropna(subset=AGG_LICENCIAMENTO, axis=1, inplace=True)\n",
     "        df_sub[\"Multiplicidade\"] = (\n",
-    "            df.groupby(AGG_LICENCIAMENTO, sort=False).size().tolist()\n",
+    "            df.groupby(AGG_LICENCIAMENTO, sort=False).count().tolist()\n",
     "        )\n",
     "        log = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
     "        df_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
     "        df_sub[\"Status\"] = \"L\"\n",
     "        df_sub[\"Fonte\"] = \"MOSAICO\"\n",
-    "        self.append2discarded([self.discarded, discarded])\n",
+    "        \n",
     "        return df_sub.loc[:, self.columns]"
    ]
   },
