--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -230,10 +230,18 @@
     "        )\n",
     "        grouped_channels[\"Canalização\"] = \"Inválida\"\n",
     "        grouped_channels.loc[:, \"Offset\"] = np.nan\n",
-    "        grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\"]] = pd.NA \n",
-    "        grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\"]] = grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\"]].astype('string')\n",
-    "        grouped_channels.loc[:, \"Offset\"] = grouped_channels.loc[:, \"Offset\"].astype('float')\n",
-    "        \n",
+    "        grouped_channels.loc[:, [\"Blocos_Downlink\", \"Faixas\"]] = pd.NA\n",
+    "        grouped_channels.loc[\n",
+    "            :, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\"]\n",
+    "        ] = grouped_channels.loc[\n",
+    "            :, [\"Blocos_Downlink\", \"Faixas\", \"Canalização\"]\n",
+    "        ].astype(\n",
+    "            \"string\"\n",
+    "        )\n",
+    "        grouped_channels.loc[:, \"Offset\"] = grouped_channels.loc[:, \"Offset\"].astype(\n",
+    "            \"float\"\n",
+    "        )\n",
+    "\n",
     "        for row in grouped_channels.itertuples():\n",
     "            interval = channels[\n",
     "                (row.Início_Canal_Down < channels[\"Downlink_Final\"])\n",
@@ -330,7 +338,7 @@
     "        down[\"Classe\"] = \"FB\"\n",
     "        up = df.drop(\"Frequência\", axis=1)\n",
     "        up = up.rename(columns={\"Frequência_Recepção\": \"Frequência\"})\n",
-    "        up.dropna(subset='Frequência', inplace=True)\n",
+    "        up.dropna(subset=\"Frequência\", inplace=True)\n",
     "        up[\"Fonte\"] = \"CANALIZACAO-SMP\"\n",
     "        up[\"Classe\"] = \"ML\"\n",
     "        return pd.concat([down, up], ignore_index=True)\n",
