--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -184,7 +184,7 @@
     "        df.loc[df[\"Num_Serviço\"] == \"205\", \"Frequência\"] = df.loc[\n",
     "            df[\"Num_Serviço\"] == \"205\", \"Frequência\"\n",
     "        ].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
-    "        df['Frequência'] = df['Frequência'].astype('float')\n",
+    "        df[\"Frequência\"] = df[\"Frequência\"].astype(\"float\")\n",
     "        df[\"Validade_RF\"] = df.Validade_RF.astype(\"string\").str.slice(0, 10)\n",
     "        df[\"Fonte\"] = \"MOSAICO\"\n",
     "        df[\"Num_Serviço\"] = df[\"Num_Serviço\"].fillna(\"\")\n",
