Working in progress

--- a/nbs/01a_connectors.ipynb
+++ b/nbs/01a_connectors.ipynb
@@ -74,10 +74,10 @@
     "\n",
     "    def connect(self):\n",
     "        # This method returns a pyodbc connection object according to the platform\n",
-    "        connection_string = f\"\"\"DRIVER={self.sql_params.get('driver')};\n",
-    "                                SERVER={self.sql_params.get('server')};\n",
-    "                                DATABASE={self.sql_params.get('database')};\n",
-    "                                timeout={self.sql_params.get('timeout')}\"\"\"\n",
+    "        connection_string = f\"\"\"Driver={self.sql_params.get('driver')};\n",
+    "                                Server={self.sql_params.get('server')};\n",
+    "                                Database={self.sql_params.get('database')};\n",
+    "                                Encrypt=no;\"\"\"\n",
     "        if self.sql_params.get(\"trusted_conn\"):\n",
     "            connection_string += f\"\"\"MultipleActiveResultSets={self.sql_params.get('mult_results')};\n",
     "                                  Trusted_Connection=yes;\"\"\"\n",
@@ -86,7 +86,9 @@
     "                                  PWD={self.sql_params.get('password')};\n",
     "                                  Trusted_Connection=no;\"\"\"\n",
     "        try:\n",
-    "            return pyodbc.connect(connection_string)\n",
+    "            return pyodbc.connect(\n",
+    "                connection_string, timeout=self.sql_params.get(\"timeout\", 10000)\n",
+    "            )\n",
     "        except pyodbc.OperationalError as e:\n",
     "            raise ConnectionError(\n",
     "                \"Não foi possível abrir uma conexão com o SQL Server. Esta conexão somente funciona da rede cabeada!\"\n",
