--- a/nbs/01b_base.ipynb
+++ b/nbs/01b_base.ipynb
@@ -143,19 +143,24 @@
     "    @cached_property\n",
     "    def discarded(self) -> pd.DataFrame:\n",
     "        df = pd.DataFrame(columns=self.columns)\n",
-    "        df[\"Log\"] = \"\"\n",
+    "        # df[\"Log\"] = \"\"\n",
     "        return df\n",
     "\n",
     "    def append2discarded(self, dfs: Union[pd.DataFrame, List]) -> None:\n",
     "        \"\"\"Receives one of more dataframes and append to the discarded dataframe\"\"\"\n",
-    "        self.discarded = pd.concat([self.discarded] + listify(dfs), ignore_index=True)\n",
+    "        dfs = listify(dfs)\n",
+    "        if not self.discarded.empty:\n",
+    "            dfs.append(self.discarded)\n",
+    "        self.discarded = pd.concat(dfs, ignore_index=True)\n",
     "\n",
     "    @staticmethod\n",
     "    def register_log(df: pd.DataFrame, log: str, row_filter: pd.Series = None):\n",
     "        \"\"\"Register a log in the dataframe\"\"\"\n",
     "        if row_filter is None:\n",
     "            row_filter = pd.Series(True, index=df.index)\n",
-    "        df.loc[row_filter, \"Log\"] = df.loc[row_filter, \"Log\"] + \"|\" + log\n",
+    "        df.loc[row_filter, \"Log\"] = (\n",
+    "            df.loc[row_filter, \"Log\"].astype(\"string\") + \"|\" + log\n",
+    "        )\n",
     "        return df\n",
     "\n",
     "    @property\n",
