--- a/nbs/01c_sitarweb.ipynb
+++ b/nbs/01c_sitarweb.ipynb
@@ -40,6 +40,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import os\n",
     "from decimal import Decimal, getcontext\n",
     "from functools import cached_property\n",
     "\n",
@@ -75,7 +76,7 @@
    "source": [
     "#| export\n",
     "getcontext().prec = 5\n",
-    "load_dotenv(find_dotenv())"
+    "load_dotenv(find_dotenv(), override=True)"
    ]
   },
   {
@@ -103,8 +104,9 @@
     "    database=\"SITARWEB\",\n",
     "    trusted_conn=True,\n",
     "    mult_results=True,\n",
-    "    username=None,\n",
-    "    password=None,\n",
+    "    encrypt=False,\n",
+    "    username=os.environ[\"USERNAME\"],\n",
+    "    password=os.environ[\"PASSWORD\"],\n",
     "    timeout=1000,\n",
     ")\n",
     "\n",
@@ -216,10 +218,10 @@
     "        df[\"Frequência\"] = df[\"Frequência\"].astype(\"float\")\n",
     "        df.loc[df.Unidade == \"kHz\", \"Frequência\"] = df.loc[\n",
     "            df.Unidade == \"kHz\", \"Frequência\"\n",
-    "        ].apply(lambda x: Decimal(x) / Decimal(1000))\n",
+    "        ].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
     "        df.loc[df.Unidade == \"GHz\", \"Frequência\"] = df.loc[\n",
     "            df.Unidade == \"GHz\", \"Frequência\"\n",
-    "        ].apply(lambda x: Decimal(x) * Decimal(1000))\n",
+    "        ].apply(lambda x: float(Decimal(x) * Decimal(1000)))\n",
     "        df.drop(\"Unidade\", axis=1, inplace=True)\n",
     "        df[\"Multiplicidade\"] = 1\n",
     "        df[\"Log\"] = \"\"\n",
