--- a/nbs/01d_mosaico.ipynb
+++ b/nbs/01d_mosaico.ipynb
@@ -45,6 +45,7 @@
     "import pandas as pd\n",
     "from dotenv import find_dotenv, load_dotenv\n",
     "from fastcore.foundation import GetAttr\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "from extracao.datasources.connectors import MongoDB\n",
     "from extracao.datasources.base import Base"
@@ -124,10 +125,9 @@
     "        client = self.connect()\n",
     "        database = client[self.database]\n",
     "        collection = database[collection]\n",
-    "        result = collection.aggregate(pipeline)\n",
-    "        return pd.DataFrame(list(result))\n",
-    "        # df = df.drop(columns=[\"_id\"])\n",
-    "        # return df\n",
+    "        df = pd.DataFrame(list(collection.aggregate(pipeline)), dtype=\"string[pyarrow]\")\n",
+    "        # Substitui strings vazias e somente com espaços por nulo\n",
+    "        return df.replace(r\"^\\s*$\", pd.NA, regex=True)\n",
     "\n",
     "    @staticmethod\n",
     "    def split_designacao(\n",
