--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -146,18 +146,15 @@
     "            # project the fields that you want to keep\n",
     "            {\"$project\": self.projection},\n",
     "        ]\n",
-    "        df = self._extract(self.collection, pipeline).astype(\n",
-    "            \"string\"\n",
-    "        )  # Necessária a conversão nesse ponto\n",
+    "        df = self._extract(self.collection, pipeline)\n",
     "        df.loc[df[\"estacao\"] == \"[]\", \"estacao\"] = \"{}\"\n",
     "        cols = [\"srd_planobasico\", \"estacao\", \"habilitacao\", \"Status\"]\n",
     "        for col in cols:\n",
     "            df = df.join(pd.json_normalize(df[col].apply(eval)))\n",
-    "        df = df.drop(columns=cols)\n",
+    "        df = df.drop(columns=cols, inplace=True)\n",
     "        df[\"Log\"] = \"\"\n",
-    "        # Substitui strings vazias e somente com espaços por nulo\n",
-    "        return df.replace(r\"^\\s*$\", pd.NA, regex=True)\n",
-    "\n",
+    "        return df\n",
+    "        \n",
     "    def _format(\n",
     "        self,\n",
     "        df: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
