--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -55,9 +55,7 @@
     "    PROJECTION_LICENCIAMENTO,\n",
     ")\n",
     "\n",
-    "from extracao.datasources.mosaico import Mosaico\n",
-    "\n",
-    "from line_profiler import profile"
+    "from extracao.datasources.mosaico import Mosaico"
    ]
   },
   {
@@ -148,10 +146,8 @@
     "            pipeline.append({\"$limit\": self.limit})\n",
     "        df = self._extract(self.collection, pipeline)\n",
     "        df[\"Log\"] = \"\"\n",
-    "        # Substitui strings vazias e somente com espaços por nulo\n",
-    "        return df.replace(r\"^\\s*$\", pd.NA, regex=True)\n",
+    "        return df\n",
     "\n",
-    "    @profile\n",
     "    def _format(\n",
     "        self,\n",
     "        df: pd.DataFrame,  # DataFrame com os dados de Estações e Plano_Básico mesclados\n",
@@ -168,15 +164,15 @@
     "        del discarded\n",
     "        gc.collect()\n",
     "        # .count() drop the NaN from the subset, not keeping them\n",
-    "        # df.dropna(subset=AGG_LICENCIAMENTO, axis=1, inplace=True)\n",
+    "        df.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
     "        df_sub[\"Multiplicidade\"] = (\n",
-    "            df.groupby(AGG_LICENCIAMENTO, sort=False).count().tolist()\n",
+    "            df.groupby(AGG_LICENCIAMENTO, sort=False).size().values\n",
     "        )\n",
     "        log = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
     "        df_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
     "        df_sub[\"Status\"] = \"L\"\n",
     "        df_sub[\"Fonte\"] = \"MOSAICO\"\n",
-    "        \n",
+    "\n",
     "        return df_sub.loc[:, self.columns]"
    ]
   },
