--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -153,9 +153,8 @@
     "        if self.limit > 0:\n",
     "            pipeline.append({\"$limit\": self.limit})\n",
     "        df = self._extract(self.collection, pipeline)\n",
-    "        df[\"Log\"] = \"[]\"\n",
-    "        # Substitui strings vazias e somente com espaços por nulo\n",
-    "        return df.replace(r\"^\\s*$\", pd.NA, regex=True)\n",
+    "        df[\"Log\"] = \"\"\n",
+    "        return df\n",
     "\n",
     "    def exclude_duplicated(\n",
     "        self,\n",
