--- a/nbs/03a_anatel.ipynb
+++ b/nbs/03a_anatel.ipynb
@@ -147,12 +147,17 @@
     "    def extraction(self) -> L:\n",
     "        sources = [\n",
     "            # Aero(),\n",
-    "            #            Stel(self.sql_params),\n",
-    "            #            Radcom(self.sql_params),\n",
+    "            Stel(self.sql_params),\n",
+    "            Radcom(self.sql_params),\n",
     "            SRD(self.mongo_uri),\n",
     "            Telecom(self.mongo_uri, self.limit),\n",
     "            SMP(self.mongo_uri, self.limit),\n",
     "        ]\n",
+    "        # result = []\n",
+    "        # for s in sources:\n",
+    "        #     print(repr(s))\n",
+    "        #     result.append(self._update_instance(s))\n",
+    "        # return result\n",
     "        return parallel(\n",
     "            Outorgadas._update_instance, sources, n_workers=len(sources), progress=True\n",
     "        )\n",
@@ -215,7 +220,7 @@
     "        if result is not None:\n",
     "            mun = result.NO_MUNICIPIO\n",
     "            lat = result.NU_LATITUDE\n",
-    "            long = result.NU_LONGITUDE\n",
+    "            long = result.NU_LONGITUDE  \n",
     "            is_valid = result.COORD_VALIDA\n",
     "        conn.close()\n",
     "        return mun, lat, long, is_valid\n",
