:rewind: Eliminated keep discarded rows because of memory
The logic is flawed to extract millions of data and then discard them. There is high cost in extract and then in process and save it.

--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -154,7 +154,7 @@
     "        df = df.drop(columns=cols, inplace=True)\n",
     "        df[\"Log\"] = \"\"\n",
     "        return df\n",
-    "        \n",
+    "\n",
     "    def _format(\n",
     "        self,\n",
     "        df: pd.DataFrame,  # DataFrame com o resultantes do banco de dados\n",
@@ -163,21 +163,21 @@
     "\n",
     "        df = df.rename(columns=self.cols_mapping)\n",
     "        status = df.Status.str.contains(\"-C1$|-C2$|-C3$|-C4$|-C7|-C98$\", na=False)\n",
-    "        discarded = df[~status].copy()\n",
-    "        log = \"\"\"[(\"Registro\", \"Status\"), \n",
-    "                (\"Processamento\", \"Registro com Status não considerado para fins de monitoração\")]\"\"\"\n",
-    "        discarded = self.register_log(discarded, log)\n",
+    "        # discarded = df[~status].copy()\n",
+    "        # log = \"\"\"[(\"Registro\", \"Status\"),\n",
+    "        #         (\"Processamento\", \"Registro com Status não considerado para fins de monitoração\")]\"\"\"\n",
+    "        # discarded = self.register_log(discarded, log)\n",
     "        df = df[\n",
     "            df.Status.str.contains(\"-C1$|-C2$|-C3$|-C4$|-C7|-C98$\", na=False)\n",
     "        ].reset_index(drop=True)\n",
     "        df[\"Frequência\"] = (\n",
     "            df.Frequência.astype(\"string\").str.replace(\",\", \".\").astype(\"float\")\n",
     "        )\n",
-    "        discarded_with_na = df[df.Frequência.isna()].copy()\n",
-    "        log = \"\"\"[(\"Registro\", \"Frequência\"), \n",
-    "                (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
-    "        discarded_with_na = self.register_log(discarded_with_na, log)\n",
-    "        df = df.dropna(subset=\"Frequência\", ignore_index=True)\n",
+    "        # discarded_with_na = df[df.Frequência.isna()].copy()\n",
+    "        # log = \"\"\"[(\"Registro\", \"Frequência\"),\n",
+    "        #         (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
+    "        # discarded_with_na = self.register_log(discarded_with_na, log)\n",
+    "        df.dropna(subset=\"Frequência\", ignore_index=True, inplace=True)  # type: ignore\n",
     "        df.loc[df[\"Num_Serviço\"] == \"205\", \"Frequência\"] = df.loc[\n",
     "            df[\"Num_Serviço\"] == \"205\", \"Frequência\"\n",
     "        ].apply(lambda x: float(Decimal(x) / Decimal(1000)))\n",
@@ -190,7 +190,7 @@
     "        )\n",
     "        df = self.split_designacao(df)\n",
     "        df[\"Multiplicidade\"] = 1\n",
-    "        self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
+    "        # self.append2discarded([self.discarded, discarded, discarded_with_na])\n",
     "        return df.loc[:, self.columns]"
    ]
   },
