--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -157,16 +157,16 @@
     "        df = self.split_designacao(df)\n",
     "        duplicated = df.duplicated(subset=AGG_LICENCIAMENTO, keep=\"first\")\n",
     "        df_sub = df[~duplicated].reset_index(drop=True)\n",
-    "        discarded = df[duplicated].reset_index(drop=True)\n",
-    "        log = f\"\"\"[(\"Colunas\", {AGG_LICENCIAMENTO}),  \n",
-    "        (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
-    "        self.append2discarded(self.register_log(discarded, log))\n",
-    "        del discarded\n",
-    "        gc.collect()\n",
+    "        # discarded = df[duplicated].reset_index(drop=True)\n",
+    "        # log = f\"\"\"[(\"Colunas\", {AGG_LICENCIAMENTO}),\n",
+    "        # (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
+    "        # self.append2discarded(self.register_log(discarded, log))\n",
+    "        # del discarded\n",
+    "        # gc.collect()\n",
     "        # .count() drop the NaN from the subset, not keeping them\n",
-    "        df.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
+    "        # df.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
     "        df_sub[\"Multiplicidade\"] = (\n",
-    "            df.groupby(AGG_LICENCIAMENTO, sort=False).size().values\n",
+    "            df.groupby(AGG_LICENCIAMENTO, dropna=True, sort=False).size().values\n",
     "        )\n",
     "        log = f'[(\"Colunas\", {AGG_LICENCIAMENTO}), (\"Processamento\", \"Agrupamento\")]'\n",
     "        df_sub = self.register_log(df_sub, log, df_sub.Multiplicidade > 1)\n",
