--- a/nbs/01g_smp.ipynb
+++ b/nbs/01g_smp.ipynb
@@ -173,17 +173,19 @@
     "        df[\"Tecnologia\"] = df[\"Tecnologia\"].fillna(\"NI\")\n",
     "        duplicated = df.duplicated(subset=AGG_SMP, keep=\"first\")\n",
     "        df_sub = df[~duplicated].copy().reset_index(drop=True)\n",
-    "        discarded = df[duplicated].copy().reset_index(drop=True)\n",
-    "        log = f\"\"\"[(\"Colunas\", {AGG_SMP}),  \n",
-    "                (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
-    "        self.append2discarded(self.register_log(discarded, log))\n",
-    "        for col in AGG_SMP:\n",
-    "            discarded_with_na = df_sub[df_sub[col].isna()]\n",
-    "            log = f\"\"\"[(\"Colunas\", {col}),  \n",
-    "                    (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
-    "            self.append2discarded(self.register_log(discarded_with_na, log))\n",
-    "        df_sub = df_sub.dropna(subset=AGG_SMP)\n",
-    "        df_sub[\"Multiplicidade\"] = df.groupby(AGG_SMP, sort=False).size().tolist()\n",
+    "        # discarded = df[duplicated].copy().reset_index(drop=True)\n",
+    "        # log = f\"\"\"[(\"Colunas\", {AGG_SMP}),\n",
+    "        #         (\"Processamento\", \"Registro agrupado e descartado do arquivo final\")]\"\"\"\n",
+    "        # self.append2discarded(self.register_log(discarded, log))\n",
+    "        # for col in AGG_SMP:\n",
+    "        #     discarded_with_na = df_sub[df_sub[col].isna()]\n",
+    "        #     log = f\"\"\"[(\"Colunas\", {col}),\n",
+    "        #             (\"Processamento\", \"Registro com valor nulo presente\")]\"\"\"\n",
+    "        #     self.append2discarded(self.register_log(discarded_with_na, log))\n",
+    "        # df_sub = df_sub.dropna(subset=AGG_SMP)\n",
+    "        df_sub[\"Multiplicidade\"] = (\n",
+    "            df.groupby(AGG_SMP, dropna=True, sort=False).size().tolist()\n",
+    "        )\n",
     "        df_sub[\"Status\"] = \"L\"\n",
     "        df_sub[\"Fonte\"] = \"MOSAICO\"\n",
     "        log = f'[(\"Colunas\", {AGG_SMP}), (\"Processamento\", \"Agrupamento\")]'\n",
