Fixed bug in telecom.py

--- a/nbs/01c_sitarweb.ipynb
+++ b/nbs/01c_sitarweb.ipynb
@@ -105,8 +105,8 @@
     "    trusted_conn=True,\n",
     "    mult_results=True,\n",
     "    encrypt=False,\n",
-    "    username=os.environ[\"USERNAME\"],\n",
-    "    password=os.environ[\"PASSWORD\"],\n",
+    "    username=os.environ.get(\"USERNAME\"),\n",
+    "    password=os.environ.get(\"PASSWORD\"),\n",
     "    timeout=1000,\n",
     ")\n",
     "\n",
@@ -178,7 +178,7 @@
     "            log = f\"\"\"[(\"Colunas\", \"Frequência\"),  \n",
     "            (\"Processamento\", \"Valor Nulo\")]\"\"\"\n",
     "            self.append2discarded(self.register_log(discarded, log))\n",
-    "        df.dropna(subset=[\"Frequência\"])\n",
+    "        df.dropna(subset=[\"Frequência\"], inplace=True)\n",
     "        return df.loc[:, self.columns]"
    ]
   },
