--- a/nbs/01e_srd.ipynb
+++ b/nbs/01e_srd.ipynb
@@ -151,7 +151,7 @@
     "        cols = [\"srd_planobasico\", \"estacao\", \"habilitacao\", \"Status\"]\n",
     "        for col in cols:\n",
     "            df = df.join(pd.json_normalize(df[col].apply(eval)))\n",
-    "        df = df.drop(columns=cols, inplace=True)\n",
+    "        df.drop(columns=cols, inplace=True)\n",
     "        df[\"Log\"] = \"\"\n",
     "        return df\n",
     "\n",
