--- a/nbs/01f_telecom.ipynb
+++ b/nbs/01f_telecom.ipynb
@@ -164,7 +164,7 @@
     "        # del discarded\n",
     "        # gc.collect()\n",
     "        # .count() drop the NaN from the subset, not keeping them\n",
-    "        # df.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
+    "        df.dropna(subset=AGG_LICENCIAMENTO, inplace=True)\n",
     "        df_sub[\"Multiplicidade\"] = (\n",
     "            df.groupby(AGG_LICENCIAMENTO, dropna=True, sort=False).size().values\n",
     "        )\n",
