:sparkles: Added local poligon validation of coordinates
Extensively tests are needed

--- a/nbs/00_constants.ipynb
+++ b/nbs/00_constants.ipynb
@@ -50,9 +50,16 @@
     "TIMEOUT = 5\n",
     "RELATORIO = \"http://sistemas.anatel.gov.br/se/eApp/reports/b/srd/resumo_sistema.php?id={id}&state={state}\"\n",
     "ESTACAO = \"http://sistemas.anatel.gov.br/se/public/view/b/srd.php?wfid=estacoes&id={}\"\n",
-    "\n",
+    "MALHA_IBGE = \"https://geoftp.ibge.gov.br/organizacao_do_territorio/malhas_territoriais/malhas_municipais/municipio_2022/Brasil/BR/BR_Municipios_2022.zip\"\n",
     "CHANNELS = Path(__file__).parent / \"datasources\" / \"arquivos\" / \"canalizacao_smp.csv\"\n",
-    "IBGE = Path(__file__).parent / \"datasources\" / \"arquivos\" / \"municipios.csv\""
+    "IBGE_MUNICIPIOS = Path(__file__).parent / \"datasources\" / \"arquivos\" / \"municipios.csv\"\n",
+    "IBGE_POLIGONO = (\n",
+    "    Path(__file__).parent\n",
+    "    / \"datasources\"\n",
+    "    / \"arquivos\"\n",
+    "    / \"BR_Municipios_2022\"\n",
+    "    / \"BR_Municipios_2022.shp\"\n",
+    ")"
    ]
   },
   {
