--- a/nbs/03a_anatel.ipynb
+++ b/nbs/03a_anatel.ipynb
@@ -50,6 +50,10 @@
    "outputs": [],
    "source": [
     "#| export\n",
+    "import os\n",
+    "import shutil\n",
+    "import urllib.request\n",
+    "from zipfile import ZipFile\n",
     "from typing import List, Tuple\n",
     "from functools import cached_property\n",
     "import pandas as pd\n",
@@ -58,6 +62,7 @@
     "from fastcore.parallel import parallel, partialler\n",
     "from fastcore.foundation import L\n",
     "from pyarrow import ArrowInvalid\n",
+    "import geopandas as gpd\n",
     "\n",
     "\n",
     "from extracao.datasources.sitarweb import Stel, Radcom, SQLSERVER_PARAMS\n",
@@ -68,7 +73,7 @@
     "from extracao.datasources.base import Base\n",
     "from extracao.datasources.aeronautica import Aero\n",
     "from extracao.datasources.connectors import SQLServer\n",
-    "from extracao.constants import COLUNAS, SQL_VALIDA_COORD"
+    "from extracao.constants import COLUNAS, IBGE_MUNICIPIOS, IBGE_POLIGONO, MALHA_IBGE"
    ]
   },
   {
@@ -89,7 +94,7 @@
    ],
    "source": [
     "#| export\n",
-    "load_dotenv(find_dotenv())"
+    "load_dotenv(find_dotenv())\n"
    ]
   },
   {
@@ -107,183 +112,160 @@
    "source": [
     "# |export\n",
     "class Outorgadas(Base):\n",
-    "    \"\"\"Classe auxiliar para agregar os dados originários da Anatel\"\"\"\n",
+    "\t\"\"\"Classe auxiliar para agregar os dados originários da Anatel\"\"\"\n",
     "\n",
-    "    def __init__(\n",
-    "        self,\n",
-    "        sql_params: dict = SQLSERVER_PARAMS,\n",
-    "        mongo_uri: str = MONGO_URI,\n",
-    "        limit: int = 0,\n",
-    "        n_workers: int = 10,\n",
-    "    ):\n",
-    "        self.sql_params = sql_params\n",
-    "        self.mongo_uri = mongo_uri\n",
-    "        self.limit = limit\n",
-    "        self.n_workers = n_workers\n",
+    "\tdef __init__(\n",
+    "\t\tself,\n",
+    "\t\tsql_params: dict = SQLSERVER_PARAMS,\n",
+    "\t\tmongo_uri: str = MONGO_URI,\n",
+    "\t\tlimit: int = 0,\n",
+    "\t\tn_workers: int = 10,\n",
+    "\t):\n",
+    "\t\tself.sql_params = sql_params\n",
+    "\t\tself.mongo_uri = mongo_uri\n",
+    "\t\tself.limit = limit\n",
+    "\t\tself.n_workers = n_workers\n",
     "\n",
-    "    @property\n",
-    "    def columns(self):\n",
-    "        return COLUNAS\n",
+    "\t@property\n",
+    "\tdef columns(self):\n",
+    "\t\treturn COLUNAS\n",
     "\n",
-    "    @cached_property\n",
-    "    def df_cache(self) -> pd.DataFrame:\n",
-    "        try:\n",
-    "            df = self._read(self.stem)\n",
-    "        except ValueError:\n",
-    "            df = pd.DataFrame(columns=self.columns)\n",
-    "        return df\n",
+    "\t@cached_property\n",
+    "\tdef df_cache(self) -> pd.DataFrame:\n",
+    "\t\ttry:\n",
+    "\t\t\tdf = self._read(self.stem)\n",
+    "\t\texcept ValueError:\n",
+    "\t\t\tdf = pd.DataFrame(columns=self.columns)\n",
+    "\t\treturn df\n",
     "\n",
-    "    @property\n",
-    "    def stem(self):\n",
-    "        return \"anatel\"\n",
+    "\t@property\n",
+    "\tdef stem(self):\n",
+    "\t\treturn 'anatel'\n",
     "\n",
-    "    @staticmethod\n",
-    "    def _update_instance(class_instance):\n",
-    "        class_instance.update()\n",
-    "        class_instance.save()\n",
-    "        return class_instance.df\n",
+    "\t@staticmethod\n",
+    "\tdef _update_instance(class_instance):\n",
+    "\t\tclass_instance.update()\n",
+    "\t\tclass_instance.save()\n",
+    "\t\treturn class_instance.df\n",
     "\n",
-    "    @cached_property\n",
-    "    def extraction(self) -> L:\n",
-    "        sources = [\n",
-    "            # Aero(),\n",
-    "            Stel(self.sql_params),\n",
-    "            Radcom(self.sql_params),\n",
-    "            SRD(self.mongo_uri),\n",
-    "            Telecom(self.mongo_uri, self.limit),\n",
-    "            SMP(self.mongo_uri, self.limit),\n",
-    "        ]\n",
-    "        # result = []\n",
-    "        # for s in sources:\n",
-    "        #     print(repr(s))\n",
-    "        #     result.append(self._update_instance(s))\n",
-    "        # return result\n",
-    "        return parallel(\n",
-    "            Outorgadas._update_instance, sources, n_workers=len(sources), progress=True\n",
-    "        )\n",
+    "\t@cached_property\n",
+    "\tdef extraction(self) -> L:\n",
+    "\t\tsources = [\n",
+    "\t\t\t# Aero(),\n",
+    "\t\t\tStel(self.sql_params),\n",
+    "\t\t\tRadcom(self.sql_params),\n",
+    "\t\t\tSRD(self.mongo_uri),\n",
+    "\t\t\tTelecom(self.mongo_uri, self.limit),\n",
+    "\t\t\tSMP(self.mongo_uri, self.limit),\n",
+    "\t\t]\n",
+    "\t\t# result = []\n",
+    "\t\t# for s in sources:\n",
+    "\t\t#     print(repr(s))\n",
+    "\t\t#     result.append(self._update_instance(s))\n",
+    "\t\t# return result\n",
+    "\t\treturn parallel(Outorgadas._update_instance, sources, n_workers=len(sources), progress=True)\n",
     "\n",
-    "    def update_cached_df(\n",
-    "        self,\n",
-    "        df: pd.DataFrame,\n",
-    "    ) -> pd.DataFrame:\n",
-    "        \"\"\"Mescla ambos dataframes eliminando os excluídos (existentes somente em df_cache)\"\"\"\n",
+    "\t@staticmethod\n",
+    "\tdef verify_shapefile_folder():\n",
+    "\t\t# Convert the file paths to Path objects\n",
+    "\t\tshapefile_path = Path(IBGE_POLIGONO)\n",
+    "\t\tzip_file_path = shapefile_path.parent.with_suffix('.zip')\n",
     "\n",
-    "        if self.df_cache.empty:\n",
-    "            return df\n",
+    "\t\t# Check if all required files exist\n",
+    "\t\trequired_files = L('.cpg', '.dbf', '.prj', '.shx').map(shapefile_path.with_suffix)\n",
+    "\t\tif not all(required_files.map(Path.is_file)):\n",
+    "\t\t\tshutil.rmtree(str(shapefile_path.parent), ignore_errors=True)\n",
+    "\t\t\t# Download and unzip the zipped folder\n",
+    "\t\t\turllib.request.urlretrieve(MALHA_IBGE, zip_file_path)\n",
+    "\t\t\twith ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "\t\t\t\tzip_ref.extractall(shapefile_path.parent.parent)\n",
+    "\t\t\tzip_file_path.unlink()\n",
     "\n",
-    "        # Merge dataframes based on all columns except \"Coords_Valida_IBGE\"\n",
-    "        merged = pd.merge(\n",
-    "            self.df_cache,\n",
-    "            df,\n",
-    "            on=list(df.columns),\n",
-    "            how=\"outer\",\n",
-    "            indicator=True,\n",
-    "            copy=False,\n",
-    "            validate=\"one_to_one\",\n",
-    "        )\n",
+    "\tdef fill_nan_coordinates(\n",
+    "\t\tself,\n",
+    "\t\tdf: pd.DataFrame,  # DataFrame com os dados da Anatel\n",
+    "\t) -> pd.DataFrame:  # DataFrame com as coordenadas validadas na base do IBGE\n",
+    "\t\t\"\"\"Valida as coordenadas consultado a Base Corporativa do IBGE, excluindo o que já está no cache na versão anterior\"\"\"\n",
     "\n",
-    "        # Exclude rows only present in df_cache\n",
-    "        df_cache = merged[merged[\"_merge\"] != \"left_only\"]\n",
+    "\t\tmunicipios = pd.read_csv(\n",
+    "\t\t\tIBGE_MUNICIPIOS,\n",
+    "\t\t\tusecols=['Código_Município', 'Latitude', 'Longitude'],\n",
+    "\t\t\tdtype='string[pyarrow]',\n",
+    "\t\t\tdtype_backend='pyarrow',\n",
+    "\t\t)\n",
     "\n",
-    "        # inplace=True not working\n",
-    "        df_cache.loc[:, [\"Latitude\", \"Longitude\"]] = df_cache.loc[\n",
-    "            :, [\"Latitude\", \"Longitude\"]\n",
-    "        ].fillna(-1)\n",
+    "\t\tdf = pd.merge(df, municipios, on='Código_Município', how='left', copy=False)\n",
     "\n",
-    "        # Drop the _merge column\n",
-    "        df_cache = df_cache.drop(columns=\"_merge\")\n",
+    "\t\tnull_coords = df.Latitude_x.isna() | df.Longitude_x.isna()\n",
     "\n",
-    "        # Write the new dataframe to cache\n",
-    "        self.df_cache = df_cache\n",
+    "\t\tdf.loc[null_coords, ['Latitude_x', 'Longitude_x']] = df.loc[\n",
+    "\t\t\tnull_coords, ['Latitude_y', 'Longitude_y']\n",
+    "\t\t]\n",
     "\n",
-    "        return self.df_cache\n",
+    "\t\tlog = \"\"\"[(\"Colunas\", [\"Latitude\", \"Longitude\"]),\n",
+    "\t\t           (\"Processamento\", \"Coordenadas Ausentes. Inserido coordenadas do Município\")]\"\"\"\n",
+    "\t\tdf = self.register_log(df, log, null_coords)\n",
     "\n",
-    "    @staticmethod\n",
-    "    def intersect_coordinates_on_poligon(\n",
-    "        row: pd.Series,  # DataFrame row\n",
-    "        sql_params: dict,  # Connection parameters to pass to SQLServer\n",
-    "    ) -> Tuple:  # Tuple com dados do município\n",
-    "        \"\"\"Valida os dados de coordenadas e município em `row` no polígono dos municípios em banco corporativo do IBGE\"\"\"\n",
+    "\t\tdf.rename(\n",
+    "\t\t\tcolumns={\n",
+    "\t\t\t\t'Latitude_x': 'Latitude',\n",
+    "\t\t\t\t'Longitude_x': 'Longitude',\n",
+    "\t\t\t\t'Latitude_y': 'Latitude_ibge',\n",
+    "\t\t\t\t'Longitude_y': 'Longitude_ibge',\n",
+    "\t\t\t},\n",
+    "\t\t\tinplace=True,\n",
+    "\t\t)\n",
     "\n",
-    "        mun, cod, lat, long = (\n",
-    "            row.Município,\n",
-    "            row.Código_Município,\n",
-    "            row.Latitude,\n",
-    "            row.Longitude,\n",
-    "        )\n",
-    "        is_valid = -1\n",
-    "        conn = SQLServer(sql_params).connect()\n",
-    "        crsr = conn.cursor()\n",
-    "        sql = SQL_VALIDA_COORD.format(long, lat, cod)\n",
-    "        crsr.execute(sql)\n",
-    "        result = crsr.fetchone()\n",
-    "        if result is not None:\n",
-    "            mun = result.NO_MUNICIPIO\n",
-    "            lat = result.NU_LATITUDE\n",
-    "            long = result.NU_LONGITUDE\n",
-    "            is_valid = result.COORD_VALIDA\n",
-    "        conn.close()\n",
-    "        return mun, lat, long, is_valid\n",
+    "\t\treturn df\n",
     "\n",
-    "    def validate_coordinates(\n",
-    "        self,\n",
-    "        df: pd.DataFrame,  # DataFrame com os dados da Anatel\n",
-    "    ) -> pd.DataFrame:  # DataFrame com as coordenadas validadas na base do IBGE\n",
-    "        \"\"\"Valida as coordenadas consultado a Base Corporativa do IBGE, excluindo o que já está no cache na versão anterior\"\"\"\n",
+    "\tdef intersect_coordinates_on_poligon(self, df: pd.DataFrame, check_municipio: bool = True):\n",
+    "\t\tregions = gpd.read_file(IBGE_POLIGONO)\n",
+    "\t\t# Convert pandas dataframe to geopandas df with geometry point given coordinates\n",
+    "\t\tgdf_points = gpd.GeoDataFrame(df, geometry=gpd.points_from_xy(df.Longitude, df.Latitude))\n",
     "\n",
-    "        df_cache = self.update_cached_df(df)\n",
+    "\t\t# Set the same coordinate reference system (CRS) as the regions shapefile\n",
+    "\t\tgdf_points.crs = regions.crs\n",
     "\n",
-    "        municipios = pd.read_csv(\n",
-    "            Path(__file__).parent / \"datasources\" / \"arquivos\" / \"municipios.csv\",\n",
-    "            usecols=[\"codigo_ibge\"],\n",
-    "            dtype=\"string\",\n",
-    "        )\n",
+    "\t\t# Spatial join points to the regions\n",
+    "\t\tpoints_with_regions = gpd.sjoin(gdf_points, regions, how='inner', predicate='within')\n",
     "\n",
-    "        # valida os códigos de municípios\n",
-    "        valid_cod_mun = df_cache.Código_Município.isin(municipios.codigo_ibge)\n",
+    "\t\tif check_municipio:\n",
+    "\t\t\t# Check correctness of Coordinates\n",
+    "\t\t\tcheck_coords = points_with_regions.Código_Município != points_with_regions.CD_MUN\n",
     "\n",
-    "        df_cache.loc[~valid_cod_mun, \"Coords_Valida_IBGE\"] = -1\n",
+    "\t\t\tlog = \"\"\"[(\"Colunas\", [\"Código_Município\", \"Município\", \"UF\"]),\n",
+    "\t\t\t\t\t(\"Processamento\", \"Informações substituídas  pela localização correta das coordenadas.\")\t\t      \n",
+    "\t\t\t\t\"\"\"\n",
+    "\t\t\tself.register_log(points_with_regions, log, check_coords)\n",
     "\n",
-    "        subset = df_cache.Coords_Valida_IBGE.isna()\n",
+    "\t\t\tpoints_with_regions.drop(['Código_Município', 'Município', 'UF'], axis=1, inplace=True)\n",
     "\n",
-    "        if linhas := list(\n",
-    "            df_cache.loc[\n",
-    "                subset, [\"Município\", \"Código_Município\", \"Latitude\", \"Longitude\"]\n",
-    "            ].itertuples()\n",
-    "        ):\n",
-    "            ibge = [\n",
-    "                \"Município_IBGE\",\n",
-    "                \"Latitude_IBGE\",\n",
-    "                \"Longitude_IBGE\",\n",
-    "                \"Coords_Valida_IBGE\",\n",
-    "            ]\n",
+    "\t\tpoints_with_regions.rename(\n",
+    "\t\t\tcolumns={\n",
+    "\t\t\t\t'CD_MUN': 'Código_Município',\n",
+    "\t\t\t\t'NM_MUN': 'Município',\n",
+    "\t\t\t\t'SIGLA_UF': 'UF',\n",
+    "\t\t\t},\n",
+    "\t\t\tinplace=True,\n",
+    "\t\t)\n",
     "\n",
-    "            func = partialler(\n",
-    "                Outorgadas.intersect_coordinates_on_poligon, sql_params=self.sql_params\n",
-    "            )\n",
+    "\t\treturn points_with_regions\n",
     "\n",
-    "            df_cache.loc[subset, ibge] = parallel(\n",
-    "                func, linhas, threadpool=True, n_workers=self.n_workers, progress=True\n",
-    "            )\n",
+    "\tdef validate_coordinates(self, df: pd.DataFrame, check_municipio: bool = True) -> pd.DataFrame:\n",
+    "\t\tself.verify_shapefile_folder()\n",
+    "\t\tif check_municipio:\n",
+    "\t\t\tdf = self.fill_nan_coordinates(df)\n",
+    "\t\treturn self.intersect_coordinates_on_poligon(df, check_municipio)\n",
     "\n",
-    "        df_cache.loc[df_cache.Coords_Valida_IBGE == -1, \"Coords_Valida_IBGE\"] = pd.NA\n",
-    "\n",
-    "        return df_cache\n",
-    "\n",
-    "    def _format(\n",
-    "        self,\n",
-    "        dfs: List,  # List with the individual API sources\n",
-    "    ) -> pd.DataFrame:  # Processed DataFrame\n",
-    "        df = pd.concat(dfs, ignore_index=True).sort_values(\n",
-    "            [\"Frequência\", \"Latitude\", \"Longitude\"], ignore_index=True\n",
-    "        )\n",
-    "\n",
-    "        # inplace not working!\n",
-    "        df.loc[:, [\"Latitude\", \"Longitude\"]] = (\n",
-    "            df.loc[:, [\"Latitude\", \"Longitude\"]].astype(\"string\").fillna(\"0\")\n",
-    "        )\n",
-    "\n",
-    "        return df"
+    "\tdef _format(\n",
+    "\t\tself,\n",
+    "\t\tdfs: List,  # List with the individual API sources\n",
+    "\t) -> pd.DataFrame:  # Processed DataFrame\n",
+    "\t\taero = self.validate_coordinates(dfs.pop(0), False)\n",
+    "\t\tanatel = self.validate_coordinates(pd.concat(dfs, ignore_index=True))\n",
+    "\t\treturn pd.concat(aero, anatel, ignore_index=True).sort_values(\n",
+    "\t\t\t['Frequência', 'Latitude', 'Longitude'], ignore_index=True\n",
+    "\t\t)"
    ]
   },
   {
